# vim_kernel

./: README.md  install.py  machine-learning-with-vim-brain.ipynb  pyproject.toml  setup.py
binder/: postBuild  requirements.txt
vim_kernel/: __init__.py  __main__.py  install.py  kernel.json  kernel.py  kernel.vim
vim_kernel/autoload/: vimkernel.vim
