[tool.poetry]
name = "vim_kernel"
version = "0.0.1"
description = "A Jupyter kernel for Vim script"
authors = ["mattn <mattn.jp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
notebook = "^6.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
