[tool.poetry]
name = "vim_kernel"
version = "0.0.2"
description = "A Jupyter kernel for Vim script"
authors = ["mattn <mattn.jp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
notebook = "^6.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.flit.metadata]
module = "vim_kernel"
author = "mattn"
author-email = "mattn.jp@gmail.com"
home-page = "https://github.com/mattn/vim_kernel"
description-file = "README.md"
classifiers = [
    'Framework :: IPython',
    'License :: MIT',
    'Programming Language :: Vim',
]
